# SeedTopic

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
demo/: demo.ipynb  demo_seed_single_topic.ipynb  topic_seeds.txt
demo/exp_result/SeedNTM_input_tfidf_pca_output_rna_seedWt1.0_priorWt0.9/: df_topic.csv  df_topic_vocab.csv  model.ckpt
seededntm/: __init__.py  data.py  experiment.py  main.py  mm_data.py  mm_experiment.py  mm_main.py  mm_model.py  model.py  util.py
